Profile Bug Fixing and the job post bug Fixing

--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -111,7 +111,7 @@
               <!-- <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple=""> -->
               <label for="file-5" *ngIf="!defaultProfilePic && employerDetails?.photo =='default.png'" >
                 <i class="fas fa-user-tie"></i>
-                <span>{{"postYourResume.uploadPhoto" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate
+                <span>{{"postYourResume.uploadPhotoCompany" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate
                   }})</span>
               </label>
             </div>
